--- a/dev/tutorials/l_master.ipynb
+++ b/dev/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e7eb59ce",
+   "id": "f2e650c9",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a58b0e41",
+   "id": "231b233c",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74e4cc3c",
+   "id": "98a6684d",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d79c656",
+   "id": "fe149f41",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f66c1d78",
+   "id": "680d2f05",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcf03e2d",
+   "id": "ad0b24b7",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eed72ed5",
+   "id": "6670b6dc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T20:33:20.216212Z",
-     "iopub.status.busy": "2025-09-23T20:33:20.216028Z",
-     "iopub.status.idle": "2025-09-23T20:33:23.212901Z",
-     "shell.execute_reply": "2025-09-23T20:33:23.212346Z"
+     "iopub.execute_input": "2025-09-24T12:27:35.773272Z",
+     "iopub.status.busy": "2025-09-24T12:27:35.773093Z",
+     "iopub.status.idle": "2025-09-24T12:27:38.997351Z",
+     "shell.execute_reply": "2025-09-24T12:27:38.996791Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b5c5d28",
+   "id": "9defdc81",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0501770b",
+   "id": "255166b9",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c58533d",
+   "id": "3561a463",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16d7bd25",
+   "id": "915cb92f",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65e4626b",
+   "id": "8a7316ab",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cba0a99",
+   "id": "a0116495",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e05cb4db",
+   "id": "b0a0a478",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71ddf8bd",
+   "id": "5c5888d5",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e6b63427",
+   "id": "b6c5365c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T20:33:23.215004Z",
-     "iopub.status.busy": "2025-09-23T20:33:23.214741Z",
-     "iopub.status.idle": "2025-09-23T20:33:25.441843Z",
-     "shell.execute_reply": "2025-09-23T20:33:25.441263Z"
+     "iopub.execute_input": "2025-09-24T12:27:38.999502Z",
+     "iopub.status.busy": "2025-09-24T12:27:38.999242Z",
+     "iopub.status.idle": "2025-09-24T12:27:41.472756Z",
+     "shell.execute_reply": "2025-09-24T12:27:41.472071Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71581565",
+   "id": "73eba754",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d88bec36",
+   "id": "916ac1a1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T20:33:25.443696Z",
-     "iopub.status.busy": "2025-09-23T20:33:25.443480Z",
-     "iopub.status.idle": "2025-09-23T20:33:25.446912Z",
-     "shell.execute_reply": "2025-09-23T20:33:25.446404Z"
+     "iopub.execute_input": "2025-09-24T12:27:41.474723Z",
+     "iopub.status.busy": "2025-09-24T12:27:41.474490Z",
+     "iopub.status.idle": "2025-09-24T12:27:41.477837Z",
+     "shell.execute_reply": "2025-09-24T12:27:41.477222Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7dde698",
+   "id": "d9d6b0fa",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b854b9a",
+   "id": "fcf7236b",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c49bda7",
+   "id": "c750621d",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00d84858",
+   "id": "e11ace49",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "266fe31c",
+   "id": "ac2c4bad",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T20:33:25.448533Z",
-     "iopub.status.busy": "2025-09-23T20:33:25.448352Z",
-     "iopub.status.idle": "2025-09-23T20:33:25.494035Z",
-     "shell.execute_reply": "2025-09-23T20:33:25.493453Z"
+     "iopub.execute_input": "2025-09-24T12:27:41.479733Z",
+     "iopub.status.busy": "2025-09-24T12:27:41.479536Z",
+     "iopub.status.idle": "2025-09-24T12:27:41.527472Z",
+     "shell.execute_reply": "2025-09-24T12:27:41.526863Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2831e3d6",
+   "id": "9d6ecbc4",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "df763ef8",
+   "id": "f98b80d9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T20:33:25.495756Z",
-     "iopub.status.busy": "2025-09-23T20:33:25.495575Z",
-     "iopub.status.idle": "2025-09-23T20:33:25.567942Z",
-     "shell.execute_reply": "2025-09-23T20:33:25.567409Z"
+     "iopub.execute_input": "2025-09-24T12:27:41.529346Z",
+     "iopub.status.busy": "2025-09-24T12:27:41.529151Z",
+     "iopub.status.idle": "2025-09-24T12:27:41.605356Z",
+     "shell.execute_reply": "2025-09-24T12:27:41.604795Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7818547",
+   "id": "ea36ad81",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2fdb60e",
+   "id": "838f7829",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "57882e95",
+   "id": "ba7377e0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T20:33:25.569770Z",
-     "iopub.status.busy": "2025-09-23T20:33:25.569586Z",
-     "iopub.status.idle": "2025-09-23T20:33:25.600135Z",
-     "shell.execute_reply": "2025-09-23T20:33:25.599630Z"
+     "iopub.execute_input": "2025-09-24T12:27:41.607350Z",
+     "iopub.status.busy": "2025-09-24T12:27:41.607152Z",
+     "iopub.status.idle": "2025-09-24T12:27:41.638370Z",
+     "shell.execute_reply": "2025-09-24T12:27:41.637767Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6989d07",
+   "id": "ffd2e5e5",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "705ea6f5",
+   "id": "5fb86a7b",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b651b00b",
+   "id": "91d54fc8",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d70b6696",
+   "id": "64c5cd67",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77283f5c",
+   "id": "d9ec844c",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9c0d0714",
+   "id": "c6231c0f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T20:33:25.601975Z",
-     "iopub.status.busy": "2025-09-23T20:33:25.601803Z",
-     "iopub.status.idle": "2025-09-23T20:33:25.606103Z",
-     "shell.execute_reply": "2025-09-23T20:33:25.605535Z"
+     "iopub.execute_input": "2025-09-24T12:27:41.640584Z",
+     "iopub.status.busy": "2025-09-24T12:27:41.640364Z",
+     "iopub.status.idle": "2025-09-24T12:27:41.644840Z",
+     "shell.execute_reply": "2025-09-24T12:27:41.644321Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b9cbfc3",
+   "id": "6b22a21f",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c64844d0",
+   "id": "b0b0a3ab",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T20:33:25.607772Z",
-     "iopub.status.busy": "2025-09-23T20:33:25.607596Z",
-     "iopub.status.idle": "2025-09-23T20:33:25.610378Z",
-     "shell.execute_reply": "2025-09-23T20:33:25.609808Z"
+     "iopub.execute_input": "2025-09-24T12:27:41.646666Z",
+     "iopub.status.busy": "2025-09-24T12:27:41.646475Z",
+     "iopub.status.idle": "2025-09-24T12:27:41.649568Z",
+     "shell.execute_reply": "2025-09-24T12:27:41.648891Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1d7d118",
+   "id": "8fc3faea",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "844b95a6",
+   "id": "8655382b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T20:33:25.611928Z",
-     "iopub.status.busy": "2025-09-23T20:33:25.611757Z",
-     "iopub.status.idle": "2025-09-23T20:33:28.196931Z",
-     "shell.execute_reply": "2025-09-23T20:33:28.196358Z"
+     "iopub.execute_input": "2025-09-24T12:27:41.651260Z",
+     "iopub.status.busy": "2025-09-24T12:27:41.651090Z",
+     "iopub.status.idle": "2025-09-24T12:27:44.344418Z",
+     "shell.execute_reply": "2025-09-24T12:27:44.343855Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "638b452f",
+   "id": "c3edc488",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0960c18",
+   "id": "19ea137e",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7696cc7",
+   "id": "2fe5a4e6",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7f78fc9",
+   "id": "d33913ae",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "efc0f8bf",
+   "id": "7df61b48",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T20:33:28.198779Z",
-     "iopub.status.busy": "2025-09-23T20:33:28.198606Z",
-     "iopub.status.idle": "2025-09-23T20:33:28.202145Z",
-     "shell.execute_reply": "2025-09-23T20:33:28.201549Z"
+     "iopub.execute_input": "2025-09-24T12:27:44.346484Z",
+     "iopub.status.busy": "2025-09-24T12:27:44.346291Z",
+     "iopub.status.idle": "2025-09-24T12:27:44.349853Z",
+     "shell.execute_reply": "2025-09-24T12:27:44.349348Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fed42a4a980>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fc6eb056980>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67392147",
+   "id": "46fd59e9",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48cb5f0e",
+   "id": "f7017c04",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef9a99f1",
+   "id": "b85635c2",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24469ec7",
+   "id": "8b0a7b2d",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9520be39",
+   "id": "c4df7ebb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T20:33:28.203871Z",
-     "iopub.status.busy": "2025-09-23T20:33:28.203705Z",
-     "iopub.status.idle": "2025-09-23T20:33:28.206449Z",
-     "shell.execute_reply": "2025-09-23T20:33:28.205973Z"
+     "iopub.execute_input": "2025-09-24T12:27:44.351672Z",
+     "iopub.status.busy": "2025-09-24T12:27:44.351447Z",
+     "iopub.status.idle": "2025-09-24T12:27:44.354657Z",
+     "shell.execute_reply": "2025-09-24T12:27:44.353989Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f1facdbc",
+   "id": "05a4601e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-23T20:33:28.207946Z",
-     "iopub.status.busy": "2025-09-23T20:33:28.207767Z",
-     "iopub.status.idle": "2025-09-23T20:33:29.268937Z",
-     "shell.execute_reply": "2025-09-23T20:33:29.268361Z"
+     "iopub.execute_input": "2025-09-24T12:27:44.356475Z",
+     "iopub.status.busy": "2025-09-24T12:27:44.356288Z",
+     "iopub.status.idle": "2025-09-24T12:27:45.436418Z",
+     "shell.execute_reply": "2025-09-24T12:27:45.435873Z"
     }
    },
    "outputs": [
